# SpeedTester

./: CMakeLists.txt
src/: CMakeLists.txt  client.cpp  main.cpp  server.cpp
src/Client/: CMakeLists.txt  Client.cpp  Client.h  Discovery.cpp  Discovery.h  TCPSender.cpp  TCPSender.h  UDPSender.cpp  UDPSender.h
src/Server/: CMakeLists.txt  DiscoveryListener.cpp  DiscoveryListener.h  Server.cpp  Server.h  TCPListener.cpp  TCPListener.h  UDPListener.cpp  UDPListener.h
src/ThreadPool/: CMakeLists.txt  ThreadPool.cpp  ThreadPool.h
